# Dendro-5.01

./: CMakeCache.txt  CMakeLists.txt  INSTALL_QG.md
BSSN_GR/: CMakeLists.txt
BSSN_GR/cuda_gr/src/: gpuBSSNExample.cpp
BSSN_GR/depreciated/src/: rk3BSSN.cpp  rk45BSSN.cpp  rk4BSSN.cpp
BSSN_GR/include/: bssnCtx.h  dataUtils.h  grDef.h  grUtils.tcc  parameters.h  rhs.h  rkBSSN.h
BSSN_GR/pars/: README  bbh.par.json
BSSN_GR/pars/old_pars_not_working/: test_par.json
BSSN_GR/src/: TwoPunctures.cpp  bssn_constraints.cpp  dataUtils.cpp  gr.cpp  grUtils.cpp  gr_nuts.cpp  parameters.cpp  rhs.cpp  rkBSSN.cpp  twinit.h  zipUnzipTest.cpp
CCZ4_GR/: CMakeLists.txt
CCZ4_GR/include/: adm2bssn.h  bh.h  ccz4_constraints.h  derivs.h  grUtils.h  grUtils.tcc  parameters.h  profile_params.h  rhs.h  rk3CCZ4.h  rk45CCZ4.h  rk4CCZ4.h
CCZ4_GR/pars/: ccz4-debug.par.json  ccz4.par.json  ks-ccz4.par.json
CCZ4_GR/scripts/: ccz4rhs_dealloc.h  ccz4rhs_dealloc_adv.h  ccz4rhs_derivs.h  ccz4rhs_derivs_adv.h  ccz4rhs_ko_derivs.h  ccz4rhs_memalloc.h  ccz4rhs_memalloc_adv.h  constraint_dealloc.h  constraint_derivs.h  constraint_memalloc.h  gen_ccz4rhs_code  gen_dervi.pl  id.py
CCZ4_GR/src/: At_rhs.cpp  B_rhs.cpp  CalGt.cpp  Gh_rhs.cpp  Gh_rhs_s1_.cpp  Gh_rhs_s2_.cpp  Gh_rhs_s3_.cpp  Gh_rhs_s4_.cpp  Gh_rhs_s5_.cpp  Gh_rhs_s6_.cpp  Gh_rhs_s7_.cpp  Gh_rhs_s8_.cpp  K_rhs.cpp  TwoPunctures.cpp  a_rhs.cpp  b_rhs.cpp  ccz4_constraints.cpp  ccz4eqs.cpp  checkDerivatives.cpp  derivs.cpp  gr.cpp  grUtils.cpp  gt_rhs.cpp  ks_vars.cpp  ksinit.cpp  parameters.cpp  physcon.cpp  physconeqs.cpp  profile_params.cpp  psi_rhs.cpp  rhs.cpp  rk3CCZ4.cpp  rk45CCZ4.cpp  rk4CCZ4.cpp  theta_z4_rhs.cpp
FEM/examples/src/: laplace.cpp  sfcLaplace.cpp  stencilExample.cpp
FEM/include/: feMatrix.h  feVec.h  feVector.h  refel.h
GR/AHFinder/: README
GR/KerrSchild/: ks_gen.mw
GR/TPInitialData/: README
GR/TPInitialData/C/: CoordTransf.c  Equations.c  FuncAndJacobian.c  Makefile  Newton.c  TP_utilities.c  TwoPunctures.c  approx.c  (+6 more)
GR/TPInitialData/C++/: CoordTransf.cpp  Equations.cpp  FuncAndJacobian.cpp  Makefile  Newton.cpp  TP_utilities.cpp  TwoPunctures.cpp  adm2bssn2.h  approx.cpp  cctk.h  driver.cpp  params.cpp  params.h  plot2.ipynb
MassGrav/: CMakeLists.txt
MassGrav/include/: grUtils.h
MassGrav/mathematica_scripts/: BSSN-MG.nb
MassGrav/pars/: test_par.json
MassGrav/rhs_gen_scripts/: constraints.py  dendro.py  massgrav.py
MassGrav/src/: bssnCtx.cpp  grUtils.cpp  physcon.cpp  rhs.cpp  rkMASSGRAV.cpp
NLSigma/src/: nlsm.cpp
ODE/include/: enuts.h
QuadGrav/: CMakeCache.txt  CMakeLists.txt
QuadGrav/GW/spherical_harmonics/: Makefile  harmonic3.f  processc2p2.f90  processclm.f90  unifandextrap.f90  uniformize.f90
QuadGrav/GW/spherical_harmonics/refs/: sphericalharmonics.nb
QuadGrav/cuda_gr/src/: gpuBSSNExample.cpp
QuadGrav/include/: TwoPunctures.h  aeh_solver.h  bssnCtx.h  dataUtils.h  derivs.h  gr.h  grDef.h  grUtils.h  grUtils.tcc  gwExtract.h.in  parameters.h  quadgrav_constraints.h  rhs.h  rkQUADGRAV.h  zipUnzipTest.h
QuadGrav/par/: test_par.json
QuadGrav/pars/: test.par.json  test_par.json
QuadGrav/pars/validation/: noiseid_par.json
QuadGrav/rhs_gen_scripts/: README.md  constraints.py  dendro.py  psi4_EB.py  quadgrav.py  quadgrav_EB_schematic.py  quadgrav_changes-aaron_Feb-23.py  quadgrav_const_evolve.py  quadgrav_const_noevo.py  quadgrav_fake.py  quadgrav_full.py  quadgrav_full_changelog_aaron_27-Jan-2023.txt  quadgrav_new.py  quadgrav_new_TEMP.py  quadgrav_test1_decoupledBSSN+trivialQG.py
QuadGrav/rhs_gen_scripts/old/: quadgrav_full.py
QuadGrav/scripts/: gen_bssnrhs_code  gen_qgrhs_code  physconeqs.cpp  quadgravrhs_dealloc.h  quadgravrhs_dealloc_adv.h  quadgravrhs_derivs.h  quadgravrhs_derivs_adv.h  quadgravrhs_ko_derivs.h  quadgravrhs_memalloc.h  quadgravrhs_memalloc_adv.h
QuadGrav/scripts/waveform_analysis/: lalsimutils.py  mismatch.py
QuadGrav/src/: TPFuncAndJacobian.cpp  TPNewton.cpp  bssnCtx.cpp  bssneqs.cpp  checkDerivatives.cpp  dataUtils.cpp  derivs.cpp  gr.cpp  grUtils.cpp  gr_nuts.cpp  parameters.cpp  physcon.cpp  physcon.cpp,v  physconeqs.cpp  quadgrav.cpp  quadgrav_constraints.cpp  quadgraveqs.cpp  quadgraveqs_fake.cpp  quadgraveqs_new_test.cpp  rhs.cpp  rkBSSN.cpp  rkQUADGRAV.cpp
QuadGrav/validation_runs/runs_07-Mar-22_bh2id/: testrun_4core.slurm
QuadGrav/validation_runs/runs_07-Mar-22_bh2id/res_test0/: quadgrav_cp_octree_0_0.oct  quadgrav_cp_step_0.cp  quadgrav_gr_0_0_1.vtu  quadgrav_gr_5_0_1.vtu  quadgrav_prof_im.prof  slurm-39842336.out
QuadGrav/validation_runs/runs_07-Mar-22_bh2id/res_test1/: quadgrav_gr_5_0_1.vtu  quadgrav_prof_im.prof
QuadGrav/validation_runs/runs_07-Mar-22_bh2id/res_test2/: quadgrav_gr_5_0_1.vtu  quadgrav_prof_im.prof
QuadGrav/validation_runs/runs_07-Mar-22_constid/: constid_par.json  testrun_4core.slurm
QuadGrav/validation_runs/runs_07-Mar-22_constid/res_test0/: quadgrav_cp_step_0.cp  quadgrav_gr_0_0_1.vtu  quadgrav_prof_im.prof  slurm-39862230.out
QuadGrav/validation_runs/runs_07-Mar-22_constid/res_test1/: quadgrav_gr_5.pvtu  quadgrav_prof_im.prof
QuadGrav/validation_runs/runs_07-Mar-22_noiseid/: testrun_4core.slurm
QuadGrav/validation_runs/runs_07-Mar-22_noiseid/res_test0/: quadgrav_gr_0.pvtu  quadgrav_gr_0_0_1.vtu  quadgrav_gr_5_0_1.vtu  quadgrav_prof_im.prof
QuadGrav/validation_runs/runs_07-Mar-22_noiseid/res_test1/: quadgrav_prof_im.prof
QuadGrav/validation_runs/runs_07-Mar-22_noiseid/res_test2/: quadgrav_prof_im.prof
QuadGrav_Sc/rhs_gen_scripts/: quadgrav_gh.py
QuadGrav_ref/include/: grUtils.h  parameters.h
QuadGrav_ref/pars/: new_test_par.json  test_par.json
QuadGrav_ref/rhs_gen_scripts/: quadgrav_const_evolve.py  quadgrav_test0_decoupledBSSN+noQG.py
QuadGrav_ref/scripts/: gen_qgrhs_code  quadgravrhs_dealloc_adv.h
QuadGrav_ref/src/: bssnCtx.cpp  gr.cpp  grUtils.cpp  parameters.cpp  rhs.cpp  rkQUADGRAV.cpp
examples/src/: mfreeTest.cpp
include/: block.h  matRecord.h  mesh.h  mesh.tcc  oda.h  oda.tcc
scripts/: bssnVis.py
src/: mesh.cpp  oda.cpp  odaUtils.cpp
test/include/: meshTestUtils.h
(+14 files in other folders)
